[GFTCodeFixer]: Update on agentic-patterns/parallelization-worflow/src/main/java/com/example/agentic/ParallelizationlWorkflow.java